--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                         <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
                         <h3><a href="#">FlyBuddy</a></h3>
                         <p>FlyBuddy is a personal travel planning full stack web application that enables users to plan vacations, join other events in real time, and communicate with other users within the event.</p>
+                        <a href="https://github.com/jsmalls05/Python-FlyBuddy" class="button large">Source Code</a>
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
@@ -102,6 +103,7 @@
                         <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
                         <h3><a href="#">HobbyFun</a></h3>
                         <p>HobbyFun App is a full-stack social media application designed to connect people with shared hobbies and enable users to communicate and interact within a safe and secured environment.</p>
+                        <a href="https://github.com/jsmalls05/C-sharp-HobbyBuddy" class="button large">Source Code</a>
                     </article>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
@@ -109,6 +111,7 @@
                         <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
                         <h3><a href="#">Lorem ipsum</a></h3>
                         <p>Ornare nulla proin odio consequat.</p>
+                        <a href="#" class="button large">Source Code</a>
                     </article>
                 </div>
 
@@ -128,19 +131,19 @@
             </header>
             <div class="row">
                 <div class="col-12">
-                    <form method="post" action="smallsjc05@gmail.com" enctype="multipart/form-data" name="emailform">
+                    <form method="POST" action="mailto:smallsjc05@gmail.com" enctype="multipart/form-data" name="emailform">
                         <div class="row">
                             <div class="col-6 col-12-small">
-                                <input type="text" name="name" id="name" placeholder="Name" />
+                                <input type="text" name="name" id="name" placeholder="Name" required/>
                             </div>
                             <div class="col-6 col-12-small">
-                                <input type="text" name="email" id="email" placeholder="Email" />
+                                <input type="email" name="email" id="email" placeholder="Email" required/>
                             </div>
                             <div class="col-12">
-                                <input type="text" name="subject" id="subject" placeholder="Subject" />
+                                <input type="text" name="subject" id="subject" placeholder="Subject" required/>
                             </div>
                             <div class="col-12">
-                                <textarea name="message" id="message" placeholder="Message"></textarea>
+                                <textarea name="message" id="message" placeholder="Message" required></textarea>
                             </div>
                             <div class="col-12">
                                 <ul class="actions">
