--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Miniport by HTML5 UP</title>
+    <title>My Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -85,7 +85,7 @@
                 <h2>Here’s some recent projects I worked on</h2>
             </header>
             <div class="row">
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-6 col-6-medium col-12-small">
                     <article class="box style2">
                         <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
                         <h3><a href="#">FlyBuddy</a></h3>
@@ -93,7 +93,7 @@
                         <a href="https://github.com/jsmalls05/Python-FlyBuddy" class="button large">Source Code</a>
                     </article>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-6 col-6-medium col-12-small">
                     <article class="box style2">
                         <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
                         <h3><a href="#">HobbyFun</a></h3>
@@ -101,10 +101,18 @@
                         <a href="https://github.com/jsmalls05/C-sharp-HobbyBuddy" class="button large">Source Code</a>
                     </article>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-6 col-6-medium col-12-small">
                     <article class="box style2">
                         <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                        <h3><a href="#">Lorem ipsum</a></h3>
+                        <h3><a href="#">Facebook Clone</a></h3>
+                        <p>Ornare nulla proin odio consequat.</p>
+                        <a href="#" class="button large">Source Code</a>
+                    </article>
+                </div>
+                <div class="col-6 col-6-medium col-12-small">
+                    <article class="box style2">
+                        <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                        <h3><a href="#">Playstation 5 UI</a></h3>
                         <p>Ornare nulla proin odio consequat.</p>
                         <a href="#" class="button large">Source Code</a>
                     </article>
