--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Portfolio</title> 
+    <title>My Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -114,7 +114,7 @@
                         <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
                         <h3><a href="#">Playstation 5 UI</a></h3>
                         <p>Ornare nulla proin odio consequat.</p>
-                        <a href="#" class="button large">Source Code</a>
+                        <a href="https://github.com/jsmalls05/PS5_Clone" class="button large">Source Code</a>
                     </article>
                 </div>
 
