--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                 <div class="col-6 col-6-medium col-12-small">
                     <article class="box style2">
                         <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                        <h3><a href="#">Facebook Clone</a></h3>
+                        <h3><a href="#">Netflix Clone</a></h3>
                         <p>Ornare nulla proin odio consequat.</p>
-                        <a href="#" class="button large">Source Code</a>
+                        <a href="https://github.com/jsmalls05/NetflixClone" class="button large">Source Code</a>
                     </article>
                 </div>
                 <div class="col-6 col-6-medium col-12-small">
